# pilot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  bench  biome.json  install.sh  license.txt  pilot_zen.md  plan_refactor.md  pyproject.toml  ruff.toml  taste.md
.github/workflows/: e2e.yml  install-smoke.yml  integration.yml  marketplace-app-check.yml  release-admin.yml  release.yml  unit-tests.yml
.greptile/: rules.md
admin/backend/: api_contract.py  app.py  auth.py  bench_helpers.py  client_ip.py  cron_manager.py  frontend.py  jwks.py  middleware.py  rate_limit.py  run_server.py  server.py  site_paths.py  uploads.py  watchdog.py  wsgi.py
admin/frontend/: components.d.ts  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
admin/frontend2/: components.d.ts  index.html  vite.config.js
bench2/commands/: build.py  new.py
bench2/config/: bench_config.py
bench2/managers/: mariadb_manager.py  redis_manager.py
bench_cli/: cli.py  loader.py  platform.py  registry.py  utils.py
bench_cli/commands/: base.py  build.py  drop_bench.py  drop_site.py  frappe_cmd.py  generate_session.py  get_app.py  init.py  install_app.py  list_site_apps.py  ls.py  new.py  new_site.py  rebuild_admin.py  remove_app.py  rename_site.py  restart.py  restore_site_from_backup.py  set_admin_password.py  setup_config.py  start.py  status.py  stop.py  uninstall_app.py  update.py  upgrade.py  volume.py
bench_cli/config/: admin_config.py  bench_config.py  bench_toml_builder.py  gunicorn_config.py  nginx_config.py  postgres_config.py  production_config.py  site_config.py  sqlite_config.py  toml_writer.py  volume_config.py  worker_config.py
bench_cli/core/: app.py  bench.py  domain_controller.py  site.py
bench_cli/managers/: admin_env_manager.py  database_manager.py  gunicorn_manager.py  letsencrypt_manager.py  mariadb_manager.py  nginx_manager.py  openrc_process_manager.py  postgres_manager.py  process_manager.py  python_env_manager.py  redis_manager.py  snapshot_orchestrator.py  snapshot_prerequisite.py  sqlite_manager.py  supervisor_process_manager.py  systemd_process_manager.py  volume_manager.py
bench_cli/tasks/: build_assets.py  drop_site_task.py  get_app_task.py  install_app_task.py  switch_branch_task.py  task_runner.py  update_task.py  wrapper.py
docs/: admin-api.md  admin-ui.md  admin.md  architecture.md  commands.md  config.md  configuration.md  domain-provider.md  migration.md  production.md  tasks.md  testing.md  volume.md
pilot/: __init__.py  admin_url.py  archive.py  cli.py  cli_args.py  context.py  exceptions.py  loader.py  package_managers.py  platform.py  registry.py  secure_files.py  updater.py  utils.py
pilot/_internal/: atomic_file.py
pilot/commands/: __init__.py  admin.py  base.py  build.py  command.py  drop_bench.py  drop_site.py  enroll.py  generate_session.py  get_app.py  init.py  jwks.py  list_site_apps.py  ls.py  new.py  new_site.py  remove_app.py  rename_site.py  restart.py  restore_site_from_backup.py  set_admin_password.py  set_central_config.py  setup_config.py  start.py  stop.py  uninstall_app.py  update.py  upgrade.py  volume.py
pilot/config/: __init__.py  (+43 more)
registry/: apps.json  apps_v2.json
scripts/: categorize_marketplace.py  check_marketplace_apps.py  diff_marketplace_apps.py  fetch_stars.py  import_marketplace.py  migrate_registry.py  run_app_validations.py  run_dependency_validations.py  run_semgrep_validations.py  smoke_install.sh  smoke_install_macos.sh  validate_registry_schema.py  validator.py
test-bench/: bench.yml
tests/: test_admin_app.py  test_admin_routes.py  test_admin_session.py  test_admin_uploads.py  test_admin_watchdog_process.py  test_api_contract.py  test_app_dependency_installer.py  test_app_reader.py  test_app_validator.py  test_apps_view.py  test_archives.py  test_audit_log.py  test_backup_pruner.py  test_backup_site_task.py  test_bench_toml_builder.py  test_bench_toml_fixtures.py  test_callbacks.py  test_central_bootstrap.py  test_central_client.py  test_cli.py  test_cli_updates_view.py  test_commands.py  test_config.py  test_core.py  test_cron_manager.py  test_database.py  test_database_reader.py  test_delete_backup_task.py  test_domain_controller.py  test_drop_bench.py  test_drop_site.py  test_fetch_app_updates_task.py  test_get_and_install_app_task.py  test_get_app.py  test_git_providers.py  test_git_view.py  test_gunicorn.py  test_import_boundaries.py  test_init_command.py  test_install_app_task.py  (+62 more)
(+930 files in other folders)
