[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bench = "pilot.cli:main"

[project.optional-dependencies]
admin = ["flask>=3.0", "psutil>=5.9", "pymysql>=1.1", "gunicorn>=21.2", "boto3==1.43.39", "psycopg2-binary>=2.9", "pyjwt[crypto]>=2.8"]
test = ["pytest>=8.0", "pytest-cov>=5.0", "requests>=2.31"]
# Browser-driven admin-UI lifecycle tests (tests/e2e). pytest-playwright pulls
# in pytest + playwright; run `playwright install chromium` after installing.
e2e = ["pytest>=8.0", "pytest-playwright>=0.5", "playwright>=1.40"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 200

[tool.ruff.format]
line-ending = "auto"

[tool.setuptools.package-data]
"admin.backend" = [
  "static/dist/**/*",
  "static/dist/index.html",
]
