[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bench = "pilot.cli:main"

[project.optional-dependencies]
admin = ["flask>=3.0", "psutil>=5.9", "pymysql>=1.1", "gunicorn>=21.2", "boto3==1.43.39", "psycopg2-binary>=2.9", "pyjwt[crypto]>=2.8"]
test = ["pytest>=8.0", "pytest-cov>=5.0", "requests>=2.31"]
# Browser-driven admin-UI lifecycle tests (tests/e2e). pytest-playwright pulls
# in pytest + playwright; run `playwright install chromium` after installing.
e2e = ["pytest>=8.0", "pytest-playwright>=0.5", "playwright>=1.51"]
# Dev-only static type checking (see [tool.mypy]); never required at runtime.
type-check = ["mypy>=1.13"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "auto"

[tool.setuptools.package-data]
"admin.backend" = [
  "static/dist/**/*",
  "static/dist/index.html",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["^build/", "^benches/", "^admin/frontend/"]

# Every requires_bench=True command's self.bench is guaranteed non-None by the
# CLI dispatch layer (pilot/registry.py) before run() executes — an invariant
# the type checker can't see from Command's shared `Bench | None` attribute.
# This is the one known, accepted gap in the type-checking baseline; every
# other module is expected to be clean.
[[tool.mypy.overrides]]
module = "pilot.commands.*"
disable_error_code = ["union-attr", "arg-type"]
