[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bench = "pilot.cli:main"

[project.optional-dependencies]
admin = ["flask>=3.0", "psutil>=5.9", "pymysql>=1.1", "gunicorn>=21.2", "boto3==1.43.39", "psycopg2-binary>=2.9", "pyjwt[crypto]>=2.8", "litellm==1.93.0"]
test = ["pytest>=8.0", "pytest-cov>=5.0", "requests>=2.31", "hypothesis>=6.0"]
e2e = ["pytest>=8.0", "pytest-playwright>=0.5", "playwright>=1.51"]
type-check = ["mypy>=1.13"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pilot*", "admin*"]
exclude = ["benches*", "tests*", "docs*", "admin.frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests/admin", "tests/pilot"]
norecursedirs = ["benches", "admin/frontend/node_modules", ".hypothesis", ".*"]
markers = [
  "incremental: run tests in order and stop dependent checks after a failure",
  "integration: requires local services or a full bench environment",
  "production: exercises production setup paths",
]

[tool.setuptools.package-data]
"admin.backend" = [
  "static/dist/**/*",
  "static/dist/index.html",
]
"pilot.managers.nginx" = [
  "templates/*.template",
]
"pilot.managers.gunicorn" = [
  "templates/*.template",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["^build/", "^benches/", "^admin/frontend/"]

# Every requires_bench=True command's self.bench is guaranteed non-None by the
# CLI dispatch layer (pilot/registry.py) before run() executes - an invariant
# the type checker can't see from Command's shared `Bench | None` attribute.
# This is the one known, accepted gap in the type-checking baseline; every
# other module is expected to be clean.
[[tool.mypy.overrides]]
module = "pilot.commands.*"
disable_error_code = ["union-attr", "arg-type"]
